fix: use json body instead of form data
