# internal/http-server/handlers/url/update/update-collection.go
@@ -1,15 +1,19 @@
 package update
 
 import (
+	"encoding/json"
 	"errors"
 	"log/slog"
 	"net/http"
 	"photo-viewer-server/internal/lib/api/response"
+	"photo-viewer-server/internal/lib/logger/sl"
+	"photo-viewer-server/internal/lib/validatorx"
 	"photo-viewer-server/internal/service"
 
 	"github.com/go-chi/chi/v5"
 	"github.com/go-chi/chi/v5/middleware"
 	"github.com/go-chi/render"
+	"github.com/go-playground/validator/v10"
 	"github.com/google/uuid"
 )
 
@@ -19,15 +23,19 @@ type AddPhotoToCollectionResponse struct {
 	PhotoUuid      uuid.UUID `json:"photo_uuid"`
 }
 
+type AddPhotoToCollectionRequest struct {
+	PhotoUuid      uuid.UUID `json:"photo_uuid" validate:"required"`
+}
+
 // AddPhotoToCollection adds a photo to a collection.
 //
 //	@Summary		Add photo to collection
 //	@Tags				collections
-//	@Accept			multipart/form-data
+//	@Accept			json
 //	@Produce		json
 //	@Security		BearerAuth
 //	@Param			collection_uuid	path		string	true	"Collection UUID"
-//	@Param			photo_uuid		formData	string	true	"Photo UUID"
+//	@Param			body		body	AddPhotoToCollectionRequest	true	"Photo UUID"
 //	@Success		201			{object}	update.AddPhotoToCollectionResponse
 //	@Failure		400			{object}	response.Response	"invalid request / photo in collection already exists"
 //	@Failure		401			{object}	response.Response	"token is empty / invalid token"
@@ -60,60 +68,41 @@ func AddPhotoToCollection(lg *slog.Logger, collectionService *service.Collection
 			return
 		}
 
-		photoUuidStr := r.FormValue("photo_uuid")
+		var metadata AddPhotoToCollectionRequest
 
-		if photoUuidStr == "" {
-			log.Error("photo param is empty")
-
-			render.Status(r, http.StatusBadRequest)
-			render.JSON(w, r, response.Error("photo uuid is empty"))
-			return
-		}
-
-		photoUuid, err := uuid.Parse(photoUuidStr)
-		if err != nil {
-			log.Error("failed to convert photo uuid str to uuid", slog.String("photo_uuid_str", photoUuidStr))
+	  if err := json.NewDecoder(r.Body).Decode(&metadata); err != nil {
+			log.Error("failed to decode metadata", sl.Err(err))
 
 			render.Status(r, http.StatusBadRequest)
-			render.JSON(w, r, response.Error("invalid request"))
+			render.JSON(w, r, response.Error("invalid metadata"))
 			return
 		}
 
-		err = collectionService.AddPhotoToCollection(r.Context(), collectionUuid, photoUuid)
+		log.Info("request metadata decoded", slog.Any("metadata", metadata))
+
+		if err := validatorx.NewValidator().Struct(metadata); err != nil {
+			validateErr := err.(validator.ValidationErrors)
+
+			log.Error("error validate request metadata", sl.Err(err))
+
+			render.Status(r, http.StatusBadRequest)
+			render.JSON(w, r, response.ValidationErrors(validateErr))
+			return
+		}
+
+		err = collectionService.AddPhotoToCollection(r.Context(), collectionUuid, metadata.PhotoUuid)
 		if err != nil {
-			if errors.Is(err, service.ErrCollectionNotFound) {
-				render.Status(r, http.StatusNotFound)
-				render.JSON(w, r, response.Error("collection not found"))
-				return
-
-			} else if errors.Is(err, service.ErrPhotoNotFound) {
-				render.Status(r, http.StatusNotFound)
-				render.JSON(w, r, response.Error("photo not found"))
-				return
-
-			} else if errors.Is(err, service.ErrCollectionActionIsNotPermitted) {
-				render.Status(r, http.StatusForbidden)
-				render.JSON(w, r, response.Error("add to collection is not permitted"))
-				return
-
-			} else if errors.Is(err, service.ErrPhotoInCollectionAlreadyExists) {
-				render.Status(r, http.StatusBadRequest)
-				render.JSON(w, r, response.Error("photo in collection already exists"))
-				return
-			}
-
-			render.Status(r, http.StatusInternalServerError)
-			render.JSON(w, r, response.Error("internal error"))
+			renderServiceError(w, r, err)
 			return
 		}
 
-		log.Info("success add photo to collection", slog.Any("photo_uuid", photoUuid), slog.Any("collection_uuid", collectionUuid))
+		log.Info("success add photo to collection", slog.Any("photo_uuid", metadata.PhotoUuid), slog.Any("collection_uuid", collectionUuid))
 
 		render.Status(r, http.StatusCreated)
 		render.JSON(w, r, &AddPhotoToCollectionResponse{
 			Response:       response.OK(),
 			CollectionUuid: collectionUuid,
-			PhotoUuid:      photoUuid,
+			PhotoUuid:      metadata.PhotoUuid,
 		})
 	}
 }
@@ -179,24 +168,7 @@ func RemovePhotoFromCollection(lg *slog.Logger, collectionService *service.Colle
 
 		err = collectionService.RemovePhotoFromCollection(r.Context(), collectionUuid, photoUuid)
 		if err != nil {
-			if errors.Is(err, service.ErrCollectionNotFound) {
-				render.Status(r, http.StatusNotFound)
-				render.JSON(w, r, response.Error("collection not found"))
-				return
-
-			} else if errors.Is(err, service.ErrPhotoNotFound) {
-				render.Status(r, http.StatusNotFound)
-				render.JSON(w, r, response.Error("photo not found"))
-				return
-
-			} else if errors.Is(err, service.ErrCollectionActionIsNotPermitted) {
-				render.Status(r, http.StatusForbidden)
-				render.JSON(w, r, response.Error("remove from collection is not permitted"))
-				return
-			}
-
-			render.Status(r, http.StatusInternalServerError)
-			render.JSON(w, r, response.Error("internal error"))
+			renderServiceError(w, r, err)
 			return
 		}
 
@@ -204,5 +176,28 @@ func RemovePhotoFromCollection(lg *slog.Logger, collectionService *service.Colle
 
 		render.Status(r, http.StatusOK)
 		render.JSON(w, r, response.OK())
+	}
+}
+
+func renderServiceError(w http.ResponseWriter, r *http.Request, err error) {
+	switch {
+	case errors.Is(err, service.ErrCollectionNotFound):
+		render.Status(r, http.StatusNotFound)
+		render.JSON(w, r, response.Error("collection not found"))
+	case errors.Is(err, service.ErrPhotoNotFound):
+		render.Status(r, http.StatusNotFound)
+		render.JSON(w, r, response.Error("photo not found"))
+	case errors.Is(err, service.ErrCollectionActionIsNotPermitted):
+		render.Status(r, http.StatusForbidden)
+		render.JSON(w, r, response.Error("add to collection is not permitted"))
+	case errors.Is(err, service.ErrPhotoInCollectionAlreadyExists):
+		render.Status(r, http.StatusBadRequest)
+		render.JSON(w, r, response.Error("photo in collection already exists"))
+	case errors.Is(err, service.ErrCollectionActionIsNotPermitted):
+		render.Status(r, http.StatusForbidden)
+		render.JSON(w, r, response.Error("remove from collection is not permitted"))
+	default:
+		render.Status(r, http.StatusInternalServerError)
+		render.JSON(w, r, response.Error("internal error"))
 	}
 }
